# devpipe

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SKILL.md  build.rs  spec.md
.github/workflows/: ci.yml
skills/devpipe/: SKILL.md
src/: analyze.rs  compress.rs  generate.rs  hook.rs  main.rs  model.rs  pipe.rs
tests/: cli_tests.rs
