[package]
name = "devpipe"
version = "0.2.0"
edition = "2021"
description = "CLI for LLM-powered text compression (surprisal scoring) and technical spec generation via Groq"
license = "MIT"
repository = "https://github.com/Amir-Zecharia/devpipe"
homepage = "https://github.com/Amir-Zecharia/devpipe"
keywords = ["llm", "compression", "spec-gen", "cli", "groq"]
categories = ["command-line-utilities"]

[[bin]]
name = "devpipe"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
candle-core = "0.8"
candle-nn = "0.8"
candle-transformers = "0.8"
tokenizers = { version = "0.20", default-features = false, features = ["onig"] }
hf-hub = { version = "0.3", features = ["tokio"] }
reqwest = { version = "0.12", features = ["json"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
dirs = "5"
flate2 = "1"

[build-dependencies]
flate2 = "1"

[features]
default = []
metal = ["candle-core/metal"]

[dev-dependencies]
assert_cmd = "2"
predicates = "3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
